--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "@next/font": "13.1.1",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "moralis": "^2.11.0",
+    "moralis-v1": "^1.12.0",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-moralis": "^1.4.2",
+    "web3uikit": "^1.0.4"
   }
 }
